Fix text-wrap/overflow bug

--- a/src/components/emoticon/style.less
+++ b/src/components/emoticon/style.less
@@ -15,8 +15,10 @@
     font-size: 18px;
     height: 24px;
     line-height: 24px;
+    overflow: hidden;
     padding: 4px;
     text-align: center;
+    white-space: nowrap;
     
     &:hover { box-shadow: 0 0 10px rgba(0,0,0,0.1); }
 }
